# openvla-gripper-dutycycle-attack

./: .env.example  .gitignore  LICENSE  README.md  RELEASE_CHECKLIST_20260510.md  environment.yml  pyproject.toml  tmp_official_eval.py
archive/: README.md
configs/: artifact_rich_official_eval_schema.yaml  attack_dense.yaml  attack_sparse.yaml  bowl_plate_state_specific_autowindow_gated_diag_20260522.yaml  deployment_detector_feature_schema.yaml  exp_sparse_attack.yaml  generic_autowindow_detector.yaml  logging.yaml  paper_black_bowl_attack.yaml  reference_windows_blackbowl_eval_only.yaml  targeted_vis_gripper_objectives_20260522.yaml  tasks_libero.yaml  tasks_libero_real.yaml  triggers.yaml  v4_attack.yaml  v4_calibration.yaml  v4_directions.yaml  v4_phase2_strong_suffix_pool_20260507.json  v4_prompt_hijack_phase0_prompts_20260507.jsonl  v4_prompt_hijack_phase1_micro_prompts_20260507.jsonl  v4_prompt_hijack_phase1_smoke_prompts_20260507.jsonl  v4_tasks_libero.yaml  v4_tasks_libero_full4_20260518.yaml
docs/: attack_mechanisms.md  autowindow_protocols.md  claim_and_evidence.md  claim_boundary_20260522.md  code_submission_summary_20260517.md  contact_quality_v2_protocol.md  dataset_diagnostics.md  driver_protocol_integration.md  experiment_status_20260517.md  generic_autowindow_protocol.md  libero_full4_denominator_construction_20260519.md  nonbb_bowl_plate_evidence_20260522.md  protocol_baseline_20260523.md  reproducibility.md  reproducibility_nonbb_bowl_plate_20260522.md  state5_exact_codex_evidence_20260523.md  table1_full4_clean_denominator_summary_20260522.md
(+175 files in other folders)
