[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvla-gripper-dutycycle-attack"
version = "0.1.0"
description = "Reproducible artifact for gripper duty-cycle shaping attacks on OpenVLA/LIBERO."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
